openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: rhoai-ai-feature-sizing
  name: rhoai-ai-feature-sizing
spec:
  selector:
    matchLabels:
      app: rhoai-ai-feature-sizing
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rhoai-ai-feature-sizing
    spec:
      containers:
      - env:
        - name: LLM_PROVIDER
          value: openshift_ai
        - name: PYTHONUNBUFFERED
          value: "1"
        - name: UV_CACHE_DIR
          value: /.cache/uv
        image: quay.io/rcook/tools:rhoai
        imagePullPolicy: Always
        name: rhoai-app
        ports:
        - containerPort: 4501
          name: api-port
          protocol: TCP
        - containerPort: 8000
          name: api-server
          protocol: TCP
        resources:
          limits:
            cpu: "6"
            memory: 12Gi
          requests:
            cpu: "2"
            memory: 12Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /.cache
          name: cache
        - mountPath: /app/uploads
          name: uploads-storage
        - mountPath: /app/output
          name: output-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: rhoai-uploads-pvc
      - name: output-storage
        persistentVolumeClaim:
          claimName: rhoai-output-pvc
      - emptyDir: {}
        name: cache
