openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rhoai-ai-feature-sizing
    component: api
  name: rhoai-api
spec:
  host: ''
  port:
    targetPort: api-server
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rhoai-ai-feature-sizing
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rhoai-ai-feature-sizing
    component: ui
  name: rhoai-ui
spec:
  host: ''
  port:
    targetPort: ui
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rhoai-ai-feature-sizing
    weight: 100
  wildcardPolicy: None
